# PQMC_allinone

./: .gitignore  CMakeLists.txt  Creutz_holstein.nml  Main_PQMC.f90  README.md  Readme.txt  a.out  analysis.txt  b1Len14by14Lt1000dtau0.10Nup196U0.64.out  cp_middle.sh  dqmc_measurements.mod  evolution.mod  input.f90  input.mod  jobs_g1 copy.tsv  jobs_g1.tsv  jobs_g15O18.tsv  jobs_local.tsv  jobs_param.tsv  lattice.mod  main.out  matrixlib.mod  measure_code.f90  mod_ML.f90  mod_gpt_meas.f90  mod_lattice.f90  mod_nrtype.f90  mod_nrutil.f90  mod_old_measure.f90  mod_phonon_field.f90  mod_randomlib.f90  mod_ranstate.f90  mod_update.f90  mod_zxy_pqmc_ssh_server.f90  mpi_32c.sh  my_analysis.txt  namelist_boson_field.nml  namelist_pf.nml  outputfinal.f90  outputnew.f90  (+20 more)
code/: Main_PQMC.f90  a.out  dqmc_measurements.mod  evolution.mod  input.f90  input.mod  lattice.mod  main.out  matrixlib.mod  mod_evolution.f90  mod_lattice.f90  mod_matrixlib.f90  mod_meas.f90  mod_nrtype.f90  mod_phonon_field.f90  mod_ranstate.f90  mod_update.f90  nrtype.mod  nrutil.mod  outputnew.f90  pf_setting.mod  pp.out  ran_state.mod  update.mod
data/data/: reading_guide.nml
data/out_files/: b1.nml  b1Len20Lt800dtau0.10Nup10U3.00.out  b1Len4*4Lt20dtau0.10Nup16lam1.73.out  b1Len8*8Lt1000dtau0.10Nup64lam1.00.out  b1Len8*8Lt960dtau0.10Nup64lam1.00.out  b2.nml  b2Len20Lt800dtau0.10Nup10U4.00.out  b2Len8*8Lt960dtau0.10Nup64lam1.00.out  b3.nml  b3Len20Lt800dtau0.10Nup10U5.00.out  b3Len8*8Lt960dtau0.10Nup64lam1.00.out  b4.nml  b4Len20Lt800dtau0.10Nup10U6.00.out  b4Len8*8Lt960dtau0.10Nup64lam1.00.out
input/: jobs_Oi.tsv  jobs_g1.tsv  jobs_g12.tsv  jobs_g2.tsv  jobs_local.tsv
input/epsoc/: jobs_g1.tsv
input/epsocz/: jobs_Oi.tsv  jobs_g08.tsv  jobs_g1.tsv  jobs_g15.tsv  jobs_g17.tsv  jobs_g2.tsv
input/model/: Creutz_holstein.nml  EPSOC.nml  EPSOCZ.nml
model/: Creutz_holstein.nml  EPSOCZ.nml  EPSOC_z_pf.nml  backup.out  fortran_input_with_comments.nml  input.mod  input_Creutz.f90  params.nml
model/OiL4/: EPSOCZ_OiL4_20251214_b1.nml
model/OiL8/: EPSOCZ_OiL8_20251210_b1.nml
model/temp/: EPSOCZ_epzO1L8_20251114_b1.nml  EPSOCZ_epzO1L8_20251114_b2.nml  EPSOCZ_epzO1L8_20251114_b3.nml  EPSOCZ_epzO1L8_20251114_b4.nml  EPSOCZ_epzO1L8_20251115_b1.nml  EPSOCZ_epzO1L8_20251115_b2.nml  EPSOCZ_epzO1L8_20251115_b3.nml  EPSOCZ_epzO1L8_20251115_b4.nml  EPSOCZ_epzOig07L4_20251128_b1.nml  EPSOCZ_epzOig07L4_20251128_b2.nml  EPSOCZ_epzOig07L4_20251128_b3.nml  EPSOCZ_epzOig07L4_20251128_b4.nml  EPSOCZ_epzOig07L4_20251128_b5.nml  EPSOCZ_epzOig07L4_20251128_b6.nml  EPSOCZ_epzOig07L4_20251128_b7.nml  EPSOCZ_epzOig07L4_20251128_b8.nml
model/test/: EPSOCZ_test_20251219_b1.nml  EPSOCZ_test_20260107_b1.nml
namelists/: input0001.nml
pprocess/: check_core_data.py  extract_for_plot.py  my_extract_and_workplace.py  workplace.py
script/: mpi_32c.sh  mpi_32c_copilot.sh  postpro.sh  run_batch.sh  run_perf.sh  submit.sh  test_srun.sh  testlocal.sh  testlocal_mac.sh
scripts/: clean.sh  mpi_32c_copilot.sh  postpro.sh  testlocal.sh
src/: Main_PQMC.f90  input.f90  mod_evolution.f90  mod_lattice.f90  mod_matrixlib.f90  mod_meas.f90  mod_meas_epsoc.f90  mod_meas_epsocz.f90  mod_phonon_field.f90  mod_ranstate.f90  mod_update.f90  outputnew.f90  temp.f90
workdir/job_1_O0117L8/: param.env  run.sh
workdir/job_1_O0117L8/model/: EPSOCZ_b1.nml  EPSOCZ_b2.nml  EPSOCZ_b3.nml  EPSOCZ_b4.nml
workdir_backup/job_1_O0117L8/model/: EPSOCZ_b1.nml  EPSOCZ_b2.nml  EPSOCZ_b3.nml  EPSOCZ_b4.nml
(+16 files in other folders)
